--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -30,7 +30,7 @@ li {
 
 li a,
 .dropbtn {
-  font-family: "Knewave", cursive;
+  font-family: "Comic Sans MS", cursive, sans-serif;
   font-size: 20px;
   display: block;
   color: white;
