--- a/src/css/FunkoCard.css
+++ b/src/css/FunkoCard.css
@@ -1,29 +1,28 @@
 .funko-collection {
-  padding: 10px;
-  padding-top: 100px;
+  padding-top: 80px;
+
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 
 .funko-card {
   position: relative;
   text-align: center;
-  width: 250px;
+  width: 25%;
   height: 350px;
   overflow: hidden;
-  border-radius: 5%;
-  box-shadow: 10px 10px 5px grey;
-  padding: 10px;
-  margin-bottom: 20px;
+
+  background-color: white;
 }
 
 .funko-img {
-  width: 100%;
+  width: 80%;
   height: 100%;
   object-fit: cover;
   transition: 0.5s ease;
   margin-top: 10px;
+  background-color: white;
 }
 
 .funko-card .funko-details {
@@ -32,7 +31,7 @@
   height: 50%;
   top: 100%;
   left: 0%;
-  background-color: #151515;
+  background-color: #333;
   transition: 0.5s ease;
 }
 
@@ -61,7 +60,7 @@
   background: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0.71) 100%
+    rgba(214, 98, 98, 0.71) 100%
   );
   transition: 0.5s ease;
 }
@@ -72,6 +71,7 @@
   padding-bottom: 0;
   margin-bottom: 0;
   color: #d33531;
+  background-color: #333;
   font-family: "Comic Sans MS", cursive, sans-serif;
 }
 .funko-details h4 {
@@ -81,6 +81,7 @@
   padding-bottom: 0;
   margin-top: 0;
   color: white;
+  background-color: #333;
   font-family: "Comic Sans MS", cursive, sans-serif;
   font-style: italic;
 }
