--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -4,10 +4,12 @@
   top: 0;
   z-index: 1;
   display: inline-block;
+  background-color: #333;
 }
 
 .logo {
   width: 185px;
+  background-color: #333;
 }
 
 ul {
@@ -21,11 +23,13 @@ ul {
 @media screen and (max-width: 600px) {
   ul.topnav li {
     float: none;
+    background-color: #333;
   }
 }
 
 li {
   float: left;
+  background-color: #333;
 }
 
 li a,
@@ -38,6 +42,7 @@ li a,
   padding: 25px 16px;
   text-decoration: none;
   cursor: pointer;
+  background-color: #333;
 }
 
 li a:hover,
@@ -73,4 +78,12 @@ li.categories {
 
 .categories:hover .categories-content {
   display: block;
+}
+
+.navbar div {
+  background-color: #333;
+}
+
+.navbar p {
+  background-color: #333;
 }
