--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -65,7 +65,7 @@ li.categories {
 }
 
 .categories-content a {
-  color: black;
+  color: #f9f9f9;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -73,7 +73,7 @@ li.categories {
 }
 
 .categories-content a:hover {
-  background-color: #f1f1f1;
+  background-color: #d33531;
   cursor: pointer;
 }
 
