user page ready

--- a/src/css/FunkoCard.css
+++ b/src/css/FunkoCard.css
@@ -7,7 +7,7 @@
 .funko-card {
   position: relative;
   text-align: center;
-  width: 25%;
+  width: 300px;
   height: 350px;
   overflow: hidden;
   background-color: white;
