funko page with label and price

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,6 @@
 @import "./css/SearchBar.css";
 
 * {
-  background-color: #272424;
+  background-color: white;
   font-family: "Signika", sans-serif;
 }
