--- a/src/css/FunkoPage.css
+++ b/src/css/FunkoPage.css
@@ -24,6 +24,7 @@
   border-radius: 10px;
   background-color: white;
   float: left;
+  box-shadow: 5px 10px 18px #888888;
 }
 
 .funko-image-div .gradient {
@@ -46,7 +47,7 @@
 }
 
 .topic {
-  color: white;
+  color: #333;
   font-family: "Signika", sans-serif;
 }
 
@@ -60,4 +61,40 @@
   text-decoration: none;
   cursor: pointer;
   background-color: #333;
+}
+
+.value {
+  margin-top: 60px;
+  width: 10px;
+  float: right;
+  color: black;
+}
+
+.label {
+  position: relative;
+  width: 400px;
+  transform: translateY(60px) translateX(-160px) rotate(45deg);
+  background-color: transparent;
+  z-index: 0;
+}
+
+.trending-value {
+  z-index: 1;
+  position: relative;
+  background-color: transparent;
+  width: 150px;
+  color: white;
+  font-family: "Signika", sans-serif;
+  transform: translateY(-150px) translateX(-20px) rotate(52deg);
+}
+
+.price {
+  z-index: 1;
+  position: relative;
+  background-color: transparent;
+  width: 150px;
+  color: #333;
+  font-family: "Signika", sans-serif;
+  font-size: 70px;
+  transform: translateY(-170px) translateX(-30px) rotate(52deg);
 }
