--- a/src/css/UserPage.css
+++ b/src/css/UserPage.css
@@ -16,6 +16,8 @@ a {
   border-radius: 50%;
   margin-top: 8%;
   margin-left: 10%;
+  z-index: 1;
+  box-shadow: 5px 10px 18px #888888;
 }
 
 .user-div {
@@ -35,7 +37,7 @@ a {
 .user-infos {
   margin-top: 14%;
   margin-left: 10%;
-  color: white;
+  color: #333;
   font-family: "Signika", sans-serif;
   font-size: 18px;
 }
@@ -51,7 +53,7 @@ a {
 
 .user-infos a {
   margin: 0;
-  color: white;
+  color: #333;
 }
 
 .collection-div {
@@ -64,6 +66,7 @@ a {
   border-color: #d33531;
   border-radius: 20px;
   text-align: center;
+  box-shadow: 10px 15px 15px #888888;
 }
 
 .wishlist-div {
@@ -76,13 +79,14 @@ a {
   border-color: #d33531;
   border-radius: 20px;
   text-align: center;
+  box-shadow: 10px 15px 15px #888888;
 }
 
 .title {
   padding-left: 25px;
   margin-bottom: 0;
   width: 100%;
-  color: white;
+  color: #333;
   font-family: "Signika", sans-serif;
 }
 
