--- a/src/css/SearchBar.css
+++ b/src/css/SearchBar.css
@@ -19,6 +19,7 @@
   font-family: "Signika", sans-serif;
   font-size: 20px;
   padding-left: 10px;
+  box-shadow: 5px 10px 18px #888888;
 }
 
 .search-bar input:focus {
