--- a/src/css/SignUpForm.css
+++ b/src/css/SignUpForm.css
@@ -21,6 +21,7 @@
   border-width: 2px;
   font-family: "Signika", sans-serif;
   background-color: white;
+  box-shadow: 5px 10px 18px #888888;
 }
 
 .signup-form input:focus {
@@ -45,6 +46,7 @@
   cursor: pointer;
   background-color: #333;
   z-index: 1;
+  box-shadow: 5px 10px 18px #888888;
 }
 
 .blank-funko {
