--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,9 @@
   background-color: white;
   font-family: "Signika", sans-serif;
 }
+
+body {
+  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
+}
