--- a/src/css/FunkoCard.css
+++ b/src/css/FunkoCard.css
@@ -130,7 +130,7 @@
 
 .loading-div {
   display: inline-flex;
-  justify-content: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   margin-top: 10px;
 }
