testing loading status

--- a/src/css/FunkoCard.css
+++ b/src/css/FunkoCard.css
@@ -133,10 +133,11 @@
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 10px;
-  margin-left: 50%;
+  margin-left: 45%;
 }
 
 .clock {
+  margin-left: 2px;
   animation: rotate infinite 5s;
   background-color: transparent;
 }
