--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -15,6 +15,10 @@
   background-color: #333;
 }
 
+.footer a {
+  background-color: #333;
+}
+
 .logo-footer {
   width: 35px;
   padding: 2px 10px 2px 10px;
